--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -39,7 +39,7 @@ De plus, il facilite le travail collaboratif.
 En effet, les développeurs travaillant de manière indépendante sur leur version du programme, la mise en commun est prise en charge par le gestionnaire.
 Il permet alors de résoudre les conflits et de fusionner les fichiers modifiés.
 
-Izpack étant un projet open-source actif, de nombreuses modifications étaient appliquées régulièrement.
+IzPack étant un projet open-source actif, de nombreuses modifications étaient appliquées régulièrement.
 Il fallait donc pouvoir travailler en parallèle des changements opérés par les contributeurs et pouvoir appliquer facilement nos modifications le jour venu.
 
 Le dépôt de référence d'IzPack est un dépôt Subversion, les contributeurs y appliquent leurs modifications.
@@ -60,7 +60,7 @@ L'un de ses principaux points forts est la gestion des branches.
 La création, suppression et fusion des branches est remarquable de simplicité et d'efficacité.
 La taille d'un dépôt Git est faible comparée à celle d'autres gestionnaires comme subversion.
 
-Julien Ponge entretient un dépôt Git synchronisé par rapport au dépot officiel subversion.
+Julien Ponge entretient un dépôt Git synchronisé par rapport au dépôt officiel subversion.
 Nous avons travaillé sur un fork de ce dépôt.
 Nous pouvions à tout moment synchroniser notre dépôt par rapport au dépôt d'origine et ainsi, appliquer toutes les modifications des contributeurs à notre dépôt.
 Cela permettait de préparer l'application de nos modifications de manière aisée. Tout ces dépôts sont hébergés sur GitHub.
